@@ -36,6 +36,7 @@ interface
   (e.g., for activities; uses new parameter misc/num_recompfac)
 - new method SCIPgetActiveVars() in scip.{h,c}, which returns for a given array of variables the active counterparts
 - added method SCIPgetNObjVars() which returns the number of variables which have a non-zero objective coefficient
+- new method SCIPupdateCutoffbound() which can be used to pass a cutoff bound
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
